Fix blue button texts on iOS

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -15,6 +15,12 @@ a {
   padding: 3px;
 }
 
+button {
+  color: var(--color-text);
+  background: transparent;
+  border: none;
+}
+
 .tint {
   --color: var(--color-tint);
   color: var(--color);
